--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "1e1cabbe-30fb-4ef6-a7c1-7d854040cf27"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
